Standardize the logo on all pages

--- a/code/dev/parts/auth/page-reset-password.html
+++ b/code/dev/parts/auth/page-reset-password.html
@@ -1,12 +1,11 @@
-<div id="top" class="my-page"></div>
 <div class="signup-wrapper">
   <div class="signup-container">
     <header>
       <div class="row">
         <div class="col-sm-12">
           <div class="text-center col-xs-4">
-            <div class="header-logo">
-              <a ng-href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
+            <div class="h1 header-logo">
+              <a ng-href="{{vendorConfig.companyWebsiteURL}}" class="logo--link" target="_blank">
                 <img class="img-responsive" ng-src="images/{{vendor}}/logo_color.png" alt="Logo" />
               </a>
             </div>
