--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -3,7 +3,7 @@
 
     <div class="login_box">
       <div id="logo" class="logo block-center">
-        <a ng-href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
+        <a ng-href="{{vendorConfig.companyWebsiteURL}}" class="logo--link" target="_blank">
           <img ng-src="images/{{vendor}}/logo.png" alt="Logo">
         </a>
       </div>
