--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -44,14 +44,14 @@
               <div class="billing-plan-details">Get a billing plan customized to meet your specific needs</div>
 
               <footer class="billing-plan-action">
-                <a href="{{vendorConfig.contactSalesLink}}" class="btn btn-success btn-lg">Contact Us</a>
+                <a ng-href="{{vendorConfig.contactSalesLink}}" class="btn btn-success btn-lg">Contact Us</a>
               </footer>
             </div>
           </div>
         </div>
         <br>
         <div class="panel-footer row text-center">
-        <p class="lead">Not sure which plan to choose? <a href="{{vendorConfig.contactSalesLink}}" class="alert-link"><!-- <i class="glyphicon glyphicon-envelope"></i> -->Talk to an expert</a></p>
+        <p class="lead">Not sure which plan to choose? <a ng-href="{{vendorConfig.contactSalesLink}}" class="alert-link"><!-- <i class="glyphicon glyphicon-envelope"></i> -->Talk to an expert</a></p>
         </div>
       </div>
 
