--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -4,9 +4,9 @@
         <header>
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="text-center col-xs-4">
+                    <div class="h1 text-center col-xs-4">
                         <div class="header-logo">
-                            <a href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
+                            <a ng-href="{{vendorConfig.companyWebsiteURL}}" class="logo--link" target="_blank">
                                 <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo"/>
                             </a>
                         </div>
