--- a/code/dev/parts/signup/end.html
+++ b/code/dev/parts/signup/end.html
@@ -6,7 +6,7 @@
           <div class="col-xs-4">
             <div class="h1 header-logo">
               <a ng-href="{{vendorConfig.companyWebsiteURL}}" class="logo--link" target="_blank">
-                <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo" />
+                <img class="img-responsive" ng-src="images/{{vendor}}/logo_color.png" alt="Logo" />
               </a>
             </div>
           </div>
@@ -16,22 +16,20 @@
         </div>
       </div>
     </header>
-    <section class="row">
-      <div class="panel-heading">
+    <section class="row" ng-init="initLoginRedirect()">
+      <div class="col-sm-offset-1 col-md-10">
         <h4>Your are almost there!</h4>
       </div>
-        <div class="col-md-12">
-          <!-- TODO: edit the text-->
-          <p class="lead">
-            Thank you for providing necessary user and payment information. Once we will complete the setting of your new account you
-            will receive a welcome email, and after that you should be able to login to our customer portal using specified
-            credentials.
-          </p>
-          <p class="lead">
-            In 10 seconds you will be automatically redirected to the login page.
-          </p>
-        </div>
-
+      <div class="col-sm-offset-1 col-md-10">
+        <p class="lead">
+          Thank you for providing necessary user and payment information. Once we will complete the setting of your new account you
+          will receive a welcome email, and after that you should be able to login to our customer portal using specified
+          credentials.
+        </p>
+        <p class="lead">
+          In 10 seconds you will be automatically redirected to the login page.
+        </p>
+      </div>
     </section>
   </div>
 </div>
