--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -76,13 +76,12 @@
       </form>
       <!-- Full form registration -->
       <div class="row col-sm-12">
-         <div class="col-xs-offset-1 col-sm-11 col-md-5">
+        <div class="col-xs-offset-1 col-sm-11 col-md-5">
           <p><strong> Discover how <em>fast</em> fast can be when accelerating your business at the edge with nuu:bit</strong></p>
           <p><strong>To Get Started:</strong></p>
           <ol class="list-instruction">
-            <li>
-              Create an account, by entering your information in the form on the right. If you have a discount/promo coupon you will have
-              a chance to enter it together with payment information on a following screen.</li>
+            <li>Create an account, by entering your information in the form on the right. If you have a discount/promo coupon
+              you will have a chance to enter it together with payment information on a following screen.</li>
             <li>A confirmation email will be sent to the address that was initially provided.</li>
             <li>Once received, click on the link in the email that will take you to the nuu:bit customer portal, where you’ll
               be able to enter your payment information and any coupon codes you might have.</li>
@@ -264,7 +263,6 @@
             </div>
           </form>
         </div>
-
       </div>
     </div>
   </div>
