--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -66,7 +66,7 @@
             <!-- //Social buttons -->
           </div>
           <div class="form-inline">
-            <div class="form-group marl_med">
+            <div class="form-group marl_med  pull-left">
               <input type="button" id="forgot_password" ng-click="forgotPassword()" value="Forgot Password?" class="btn btn-link forgot_password">
             </div>
             <div class="form-group marl_med pull-right">
@@ -78,6 +78,6 @@
       </form>
       <div class="clearfix"></div>
     </div>
-    <span class="footerNoteA">{{vendorConfig.copyright}}</span>
+    <div class="footerNoteA text-center">{{vendorConfig.copyright}}</div>
   </div>
 </section>
