--- a/code/dev/parts/signup/form-signup-vs-promo.tpl.html
+++ b/code/dev/parts/signup/form-signup-vs-promo.tpl.html
@@ -18,9 +18,9 @@
   <div class="form-body" ng-if="!$ctrl.isRegistryFinish">
     <div class="row">
       <!-- Full form registration with PROMOCODE -->
-      <div class="row col-sm-12">
-        <divdata-spy="affix" data-offset-top="140" class="affix affix-top col-sm-offset-1 col-sm-11 col-md-5">
-          <p><strong> nuu:bit </strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+      <div class="row col-xs-12 col-sm-12">
+        <div class="affix affix-top col-sm-offset-1 col-xs-offset-1 col-xs-11 col-sm-11 col-md-5">
+          <p class="information"><strong> nuu:bit </strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
             has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
             and scrambled it to make a type specimen book</strong>
           </p>
@@ -46,7 +46,7 @@
           <hr>
 
       </div>
-      <div class="col-md-offset-6 col-sm-12 col-md-6">
+      <div class="col-md-offset-6 col-xs-12 col-sm-12 col-md-6">
         <form class="col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-0 col-lg-11 col-xs-11 col-sm-11 col-md-11  form-horizontal form-contact-info--full"
           name="newUser" novalidate>
           <div class="form-group " ng-class="{ 'has-error': newUser.email.$invalid && newUser.email.$dirty }">
