Updated the VS2017 promo page

--- a/code/dev/parts/signup/form-signup-vs-promo.tpl.html
+++ b/code/dev/parts/signup/form-signup-vs-promo.tpl.html
@@ -20,15 +20,16 @@
       <!-- Full form registration with PROMOCODE -->
       <div class="row col-xs-12 col-sm-12">
         <div class="affix affix-top col-sm-offset-1 col-xs-offset-1 col-xs-11 col-sm-11 col-md-5">
-          <div class="h4 text text-center text-info">‘OPEN EDGE 90-DAY FAST PASS’ OFFER <br>FOR VISUAL STUDIO COMMUNITY</div>
-          <p><strong>Are you still running your digital content over delivery platforms originally built for wired devices?</strong></p>
+          <div class="h4 text text-center text-info">OPEN EDGE 90-DAY FAST PASS OFFER <br>FOR VISUAL STUDIO COMMUNITY</div>
+          <br>
+          <p><strong>Still running your digital content over delivery platforms built for wired devices?</strong></p>
           <p class="information">Our OpenEdge™ Global Delivery Platform brings together our smart, next-generation CDN + open source approach to
-            edge computing solutions for companies who are digitally transforming their businesses. Special, limited time,
+            edge computing for companies competing in the digital economy. Special, limited time,
             OpenEdge™ 90-Day Fast Pass offer* includes:</strong>
           </p>
 
           <ul class="list-information">
-            <li>Global Network (30+ countries)</li>
+            <li>Global Network (30+ locations)</li>
             <li>400GB web or mobile app traffic</li>
             <li>1M requests per month</li>
             <li>5 apps</li>
@@ -36,23 +37,22 @@
             <li>5 wildcard SSL name</li>
             <li>Analytics Portal</li>
           </ul>
-          <p><em>*Offer ends June 7, 2017. Overage charges may apply.</em></p>
-          <p><strong> Unlock Your Access to Our OpenEdge™ Global Delivery Platform</strong></p>
+          <p><em>*Offer ends June 7, 2017.</em></p>
+          <br>
+          <p><strong> Unlock Your Access to Our OpenEdge™ Global Delivery Platform Today</strong></p>
           <p><strong>To Get Started:</strong></p>
           <ol class="list-instruction">
             <li>Create an nuu:bit account by completing the Sign Up form on the right.
-              <br><em> Make sure you’ve included your Promo Code!</em></li>
+              Use Promo Code <b>VS2017</b>.</li>
             <li>A confirmation email will be sent to the email address provided.</li>
-            <li>Click on the link in the email, which will take you to our nuu:bit customer portal where you’ll be prompted to
-              enter your payment information.<br>
-              <em> When you include your Promo Code during sign up, your credit card will not be billed for the duration of your offer.</em></li>
-            <li>Enjoy your access to our <strong>OpenEdge™ Global Delivery Platform</strong> where you can test drive your content
-              on our network to see how fast you can accelerate both your content and your revenues.</li>
+            <li>Click on the link in the email, which will take you to our nuu:bit customer portal where you'll be prompted to
+              enter your payment information.
+              <em> Your credit card will not be billed for the duration of your offer.</em></li>
+            <li>Test drive your content on our <strong>OpenEdge™ Global Delivery Platform</strong> and see how fast you can accelerate your content and your revenues.</li>
           </ol>
           <br>
           <div class="text text-center">
-            <!-- TODO: change link or make a modal window with feedback form -->
-            <a href="https://support.nuubit.net/hc/en-us/requests/new" class="btn btn-primary">WE'D LOVE YOUR FEEDBACK!</a>
+            <a href="mailto:info@nuubit.com?subject=Visual Studio Promotion Feedback" class="btn btn-primary">WE'D LOVE YOUR FEEDBACK!</a>
           </div>
           <hr>
 
