--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -40,7 +40,7 @@
         <div class=" col-sm-offset-3 col-md-offset-4 col-sm-6 col-md-4  text-center " _style="max-height: 280px">
           <div class="billing-plan">
             <div class="billing-plan-header">
-              <h2 class="billing-plan-title">Enterprise</h2>
+              <h2 class="billing-plan-title">Custom Edge Solution</h2>
             </div>
             <br>
             <div class="billing-plan-details">Get a billing plan customized to meet your specific needs</div>
