--- a/code/dev/parts/signup/form-signup-vs-promo.tpl.html
+++ b/code/dev/parts/signup/form-signup-vs-promo.tpl.html
@@ -1,4 +1,4 @@
-<div class="signup-form" ng-init="$ctrl.model.promocode='VS2017'; bp_='billing-plan-developer';">
+<div class="signup-form" ng-init="$ctrl.model.promocode='VS2017'; bp_='billing-plan-startup';">
   <div class="verification-msg" ng-if="$ctrl.isRegistryFinish">
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
