--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -5,7 +5,7 @@
         <h2 class="text">{{vendorConfig.companyNameShort}} Billing Plans</h2>
         <p class="text-muted">The world of mobile app and web acceleration is just a few minutes away.</p>
 
-        <h4 class="text-info"><b>One month free trial - NO CREDIT CARD REQUIRED</b></h4>
+<!--        <h4 class="text-info"><b>One month free trial - NO CREDIT CARD REQUIRED</b></h4>  -->
       </div>
     </div>
 
