--- a/code/dev/parts/dashboard/widgets/widget-add.html
+++ b/code/dev/parts/dashboard/widgets/widget-add.html
@@ -5,19 +5,6 @@
 <div class="widgets-list modal-body">
   <div class="widget-list-container" _style="display: inline-block;">
     <uib-accordion close-others="true">
-      <div uib-accordion-group is-open="accordionState.isWebHeaderOpen">
-        <uib-accordion-heading>
-          <span class="widget-group-title h5">Web Analytics
-          <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': accordionState.isWebHeaderOpen, 'glyphicon-chevron-right': !accordionState.isWebHeaderOpen}"></i>
-          </span>
-        </uib-accordion-heading>
-        <dl class="dl-horizontal widget-group-content">
-          <dt ng-repeat-start="(key, widget) in widgets | orderWidgets: 'web' ">
-            <a href="" ng-click="addWidget(key)">{{::widget.title}}</a>
-          </dt>
-          <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
-        </dl>
-      </div>
       <div uib-accordion-group is-open="accordionState.isAppsHeaderOpen">
         <uib-accordion-heading>
           <span class="widget-group-title h5">Apps Analytics
@@ -26,6 +13,19 @@
         </uib-accordion-heading>
         <dl class="dl-horizontal">
           <dt ng-repeat-start="(key, widget) in ::widgets | orderWidgets: 'apps' ">
+            <a href="" ng-click="addWidget(key)">{{::widget.title}}</a>
+          </dt>
+          <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
+        </dl>
+      </div>
+      <div uib-accordion-group is-open="accordionState.isWebHeaderOpen">
+        <uib-accordion-heading>
+          <span class="widget-group-title h5">Web Analytics
+          <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': accordionState.isWebHeaderOpen, 'glyphicon-chevron-right': !accordionState.isWebHeaderOpen}"></i>
+          </span>
+        </uib-accordion-heading>
+        <dl class="dl-horizontal">
+          <dt ng-repeat-start="(key, widget) in widgets | orderWidgets: 'web' ">
             <a href="" ng-click="addWidget(key)">{{::widget.title}}</a>
           </dt>
           <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
