For all traffic graphs add “Add To Dashboard” button to allow easily adding a configured chart to the dashboard

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -472,6 +472,8 @@
 <script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptions.controller.js"></script>
 <script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptionResources.controller.js"></script>
 <!-- //Azure Marcetplace-->
+
+<script type="text/javascript" src="js/portal/report-to-dashboard/report-to-dashboard.module.js"></script>
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
