--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -339,7 +339,7 @@
               </table>
 
               <hr>
-              <h4 class="title-list">Domains Usage</h4>
+              <h4 class="list-title">Domains Usage</h4>
 
               <table class="table table-stripped table-condensed">
                 <thead>
