--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -460,7 +460,13 @@
 <script type="text/javascript" src="js/portal/dns_zones/controller/dns_zonesCrud.controller.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegration.directive.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegrationPanel.directive.js"></script>
+<script type="text/javascript" src="js/portal/dns_zones/dns-zone-select/dnsZoneSelect.directive.js"></script>
 <!-- //DNS Zones -->
+<!-- DNS Analytics-->
+<script type="text/javascript" src="js/portal/dns_analytics/dns_analytics.module.js"></script>
+<script type="text/javascript" src="js/portal/dns_analytics/dns_analytics.routes.js"></script>
+<script type="text/javascript" src="js/portal/dns_analytics/controllers/DNSAnalytics.controller.js"></script>
+<!-- //DNS Analytics-->
 <!-- Azure Marcetplace-->
 <script type="text/javascript" src="js/portal/azure-resources/azureResources.module.js"></script>
 <script type="text/javascript" src="js/portal/azure-resources/azureResources.routes.js"></script>
