Small fix for UI

--- a/code/dev/parts/dns_analytics/dns_analytics.tpl.html
+++ b/code/dev/parts/dns_analytics/dns_analytics.tpl.html
@@ -47,7 +47,7 @@
             <div class="col-sm-12 col-md-4">
               <div class="panel">
                 <div class="panel-heading">
-                  <label class="title h4"> Total  DNS Zones<br>&nbsp</label>
+                  <label class="title h4">Total DNS Zones<br>&nbsp</label>
                 </div>
                 <div class="panel-body"> {{vm.accountTotalDNSZones || 0}} </div>
               </div>
@@ -55,8 +55,7 @@
             <div class="col-sm-12 col-md-4 ">
               <div class="panel">
                 <div class="panel-heading">
-                  <label class="title h4"> DNS Records <br>For This Domain
-                   </label>
+                  <label class="title h4">DNS Records<br>For This Domain</label>
                 </div>
                 <div class="panel-body">{{vm.totalDNSZoneRecords || 0}}</div>
               </div>
@@ -64,7 +63,7 @@
             <div class="col-sm-12 col-md-4">
               <div class="panel">
                 <div class="panel-heading ">
-                  <label class="title h4"> DNS Queries <br> For Last 30 Days</label>
+                  <label class="title h4">DNS Queries <br>For Last 30 Days</label>
                 </div>
                 <div class="panel-body">{{vm.totalDNSZoneQueries30d || 0}}</div>
               </div>
