--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -478,6 +478,10 @@
 <script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptions.controller.js"></script>
 <script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptionResources.controller.js"></script>
 <!-- //Azure Marcetplace-->
+<!-- WAF Analytics -->
+<script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.module.js"></script>
+<script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.routes.js"></script>
+<!-- //WAF Analytics -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
