Update DNS Analytics Page

--- a/code/dev/parts/dns_analytics/dns_analytics.tpl.html
+++ b/code/dev/parts/dns_analytics/dns_analytics.tpl.html
@@ -45,27 +45,27 @@
         <div class="panel-body">
           <div class="row   text-center dns_zones_total__view_container">
             <div class="col-sm-12 col-md-4">
-              <div class="panel">
+              <div class="panel nd-block">
                 <div class="panel-heading">
                   <label class="title h4">Total DNS Zones<br>&nbsp</label>
                 </div>
-                <div class="panel-body"> {{vm.accountTotalDNSZones || 0}} </div>
+                <div class="panel-body"><span class="stats-value h4"> {{vm.accountTotalDNSZones || 0}}</span> </div>
               </div>
             </div>
             <div class="col-sm-12 col-md-4 ">
-              <div class="panel">
+              <div class="panel nd-block">
                 <div class="panel-heading">
                   <label class="title h4">DNS Records<br>For This Domain</label>
                 </div>
-                <div class="panel-body">{{vm.totalDNSZoneRecords || 0}}</div>
+                <div class="panel-body"><span class="stats-value h4">{{vm.totalDNSZoneRecords || 0}}</span></div>
               </div>
             </div>
             <div class="col-sm-12 col-md-4">
-              <div class="panel">
+              <div class="panel nd-block">
                 <div class="panel-heading ">
                   <label class="title h4">DNS Queries <br>For Last 30 Days</label>
                 </div>
-                <div class="panel-body">{{vm.totalDNSZoneQueries30d || 0}}</div>
+                <div class="panel-body"><span class="stats-value h4">{{vm.totalDNSZoneQueries30d || 0}}</span></div>
               </div>
             </div>
 
@@ -73,7 +73,7 @@
           <div class="row  dns_zones_line_chart__view_container">
             <div class="col-sm-12">
               <div class="panel">
-                <div class="panel-heading text-center">
+                <div class="panel-heading">
                   <label class="title h4">DNS Queries Per Second</label>
                   <div class="panel-body">
                     <div style="min-width: 500px; min-height: 350px" line-chart ng-data="vm.dnsZoneData" ng-chart-options="vm.chartOptions"></div>
