Fix text 'Coming Soon!'

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -563,7 +563,7 @@
               </uib-tab-heading>
               <div class="form-group form-inline">
                 <label for="enable_waf" class="col-sm-3 control-label">
-                   Coming Soon
+                   Coming Soon!
                 </label>
               </div>
               <!-- //  “WAF” -->
