--- a/code/dev/parts/waf-analytics/waf.tpl.html
+++ b/code/dev/parts/waf-analytics/waf.tpl.html
@@ -11,7 +11,7 @@
       <div class="panel panel-default">
 
         <div class="panel-body">
-          <label> Coming soon </label>
+          <label> Coming soon! </label>
         </div>
       </div>
     </div>
