Fixed the title of DNS queries graph

--- a/code/dev/parts/dns_analytics/dns_analytics.tpl.html
+++ b/code/dev/parts/dns_analytics/dns_analytics.tpl.html
@@ -74,7 +74,7 @@
             <div class="col-sm-12">
               <div class="panel">
                 <div class="panel-heading">
-                  <label class="title h4">DNS Queries Per Second</label>
+                  <label class="title h4">DNS Queries</label>
                   <div class="panel-body">
                     <div style="min-width: 500px; min-height: 350px" line-chart ng-data="vm.dnsZoneData" ng-chart-options="vm.chartOptions"></div>
                   </div>
