Update Account PO and smoke test for Account Profile

--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -75,7 +75,7 @@
     <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-<div class="container-fluid" ui-view="page">
+<div class="container-fluid" ui-view="page"  id="account_profile__container">
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
