Update Domain Edit Page

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -130,13 +130,13 @@
               </div>
               <!-- Enhanced Traffic Analytics -->
               <div class="form-group form-inline">
-                <label for="enable_rum" class="col-sm-3 control-label">
+                <label for="enableEnhancedAnalytics" class="col-sm-3 control-label">
                   Enhanced Traffic Analytics
                 </label>
                 <div class="col-md-9">
-                  <toggle-switch id="enableEnhancedAnalytics" name="enable_rum" is-disabled="_loading" ng-model="model.enable_enhanced_analytics" on-label="On" off-label="Off">
+                  <toggle-switch id="enableEnhancedAnalytics" name="enableEnhancedAnalytics" is-disabled="_loading" ng-model="model.enable_enhanced_analytics" on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enable_rum" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="By enabling Enhanced Traffic Analytics feature for the domain you will get an access to a wide range of information regarding your end users">
+                  <label for="enableEnhancedAnalytics" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="By enabling Enhanced Traffic Analytics feature for the domain you will get an access to a wide range of information regarding your end users">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
